--- a/public/index.html
+++ b/public/index.html
@@ -103,13 +103,13 @@
                            <div class="carousel-item">
                               <div class="carousel-caption d-md-block cuplle">
                                  <h3 data-animation="animated bounceInLeft">
+                                    I
+                                 </h3>
+                                 <h3 data-animation="animated bounceInLeft">
                                     Love
                                  </h3>
                                  <h3 data-animation="animated bounceInLeft">
-                                    Wedding Couple
-                                 </h3>
-                                 <h3 data-animation="animated bounceInLeft">
-                                    Groom Woman
+                                    You
                                  </h3>
                                  <button class="btn btn-primary  read_more whitebg" data-animation="animated bounceInLeft">Contact Us</button>
                               </div>
