--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
                </div>
                <div class="col-md-8 offset-md-2">
                   <div class="about_img text_align_center">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo <br>consequat. Duis aute irure dolor in reprehenderit in voluptate velit<br>
+                     <p>Wish i could say that I feel stupid but I don't, coz honestly a part of me still holding onto hope. <br>Don't let me down<br>
                         esse Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
                      </p>
                      <a class="read_more" href="about.html">About More</a>
